# ldfl

./: .gitignore  CMakeLists.txt  README.md  fliar-wrapper.c  fliar.c  ldfl-wrapper.c
.github/workflows/: coverage.yml  coverall.yml  doxygen.yml  ubuntu-x86_64.yml  valgrind.yml
cfg/: config-flair.h  config-fliar.h  config.h  ldfl-config.h  ldfl-config.json  mapping.json
cmake/: CodeCoverage.cmake  FindJansson.cmake  FindPCRE2.cmake
docs/: Doxyfile.in
examples/: full-config.h  full-config.json  trace-call-syslog.json
lib/: config_json.h  fliar-priv.h  fliar.c  ldfl-config-parser.h  ldfl.c
misc/: format  valgrind.sh
tests/: basic-config.h  exec-config.json  exec_test_config.json  exec_test_script.sh  multimapping-config.h  multirule-config.h  test-config.h  tests-config.c  tests-exec.c  tests-mapping.c  tests-multimapping.c  tests-utils.c  tests-wrapper.c  tests.c
utils/: embedder.c
